# poseidongold

./: Dockerfile  README.md  go.mod  go.sum  main.go
go/: doc.go  lib.h  rustposeidongold_rust.go  rustposeidongold_rust_darwin_arm64.go  rustposeidongold_rust_linux_aarch64.go  rustposeidongold_rust_linux_amd64.go  rustposeidongold_rust_linux_arm64.go  rustposeidongold_test.go
rust/: Cargo.toml
rust/src/: lib.rs
