[package]
name = "rustposeidongold"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
plonky2 = {git="https://github.com/okx/plonky2.git", rev="0f8647c0145b4f2711baae5ad40dc931c41f919c"}
plonky2_field = {git="https://github.com/okx/plonky2.git", rev="0f8647c0145b4f2711baae5ad40dc931c41f919c"}